--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -296,7 +296,7 @@ font:
 
   # Uri of fonts host. E.g. //fonts.googleapis.com (Default).
   host:
-
+  
   # Font options:
   # `external: true` will load this font family from `host` above.
   # `family: Times New Roman`. Without any quotes.
@@ -343,7 +343,7 @@ font:
 mathjax:
   enable: true
   per_page: true
-  cdn: //cdn.bootcss.com/mathjax/2.7.1/latest.js?config=TeX-AMS-MML_HTMLorMML
+  cdn: //cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML
 
 # Han Support docs: https://hanzi.pro/
 han: false
