--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
     "live2d-widget-model-hijiki": "^1.0.5"
+  },
+  "devDependencies": {
+    "hexo-generator-baidu-sitemap": "^0.1.6",
+    "hexo-generator-sitemap": "^1.2.0"
   }
 }
