--- a/package.json
+++ b/package.json
@@ -7,6 +7,12 @@
   },
   "dependencies": {
     "eslint": "^5.16.0",
+    "gulp-htmlclean": "^2.7.22",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-rename": "^1.4.0",
+    "gulp-uglify": "^3.0.2",
     "hexo": "^3.8.0",
     "hexo-asset-image": "0.0.3",
     "hexo-deployer-git": "^1.0.0",
