--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "version": "3.8.0"
   },
   "dependencies": {
+    "clipboard": "^2.0.4",
     "eslint": "^5.16.0",
     "gulp-htmlclean": "^2.7.22",
     "gulp-htmlmin": "^5.0.1",
