--- a/_config.yml
+++ b/_config.yml
@@ -95,3 +95,21 @@ deploy:
 - type: git
   repo: git@git.dev.tencent.com:pengshiliang/pengshiliang.git
   branch: master
+
+live2d:
+  enable: true
+  scriptFrom: local
+  pluginRootPath: live2dw/
+  pluginJsPath: lib/
+  pluginModelPath: assets/
+  tagMode: false
+  debug: false
+  model:
+    use: live2d-widget-model-tororo
+  display:
+    position: right
+    width: 150
+    height: 300
+  mobile:
+    show: true
+  
