--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "hexo-renderer-mathjax": "^0.6.0",
     "hexo-renderer-stylus": "^0.3.3",
     "hexo-server": "^0.3.3",
-    "live2d-widget-model-hijiki": "^1.0.5"
+    "live2d-widget-model-hijiki": "^1.0.5",
+    "live2d-widget-model-tororo": "^1.0.5",
+    "live2d-widget-model-wanko": "^1.0.5"
   },
   "devDependencies": {
     "hexo-generator-baidu-sitemap": "^0.1.6",
