--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-helper-live2d": "^3.1.1",
+    "hexo-neat": "^1.0.4",
     "hexo-renderer-ejs": "^0.3.1",
     "hexo-renderer-kramed": "^0.1.4",
     "hexo-renderer-mathjax": "^0.6.0",
